# AgentApiBench

./: .gitignore  .qmmitignore  Dockerfile  README.md  apply_fixes.py  architecture_and_workflow.md  current_solution_status.md  fix_reset_kwargs.sh  how_to_run.md  inference.py  inference_patch.txt  inference_patch2.txt  inference_patch3.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  solution_document.md  start.sh  update_inference.py  user_requirements.md
mock_api/: call_logger.py  server.py
mock_api/data/: customers.json  invoices.json
scenarios/: loader.py
scenarios/task1/: scenario_01.json  scenario_02.json  scenario_03.json  scenario_04.json  scenario_05.json
scenarios/task2/: scenario_01.json  scenario_02.json  scenario_03.json  scenario_04.json  scenario_05.json
scenarios/task3/: scenario_01.json  scenario_02.json  scenario_03.json  scenario_04.json  scenario_05.json
server/: agentapi_environment.py  app.py
server/graders/: task1_grader.py  task2_grader.py  task3_grader.py
tests/: test_environment.py  test_graders.py  test_mock_api.py
